@@ -1,3 +1,11 @@
+drkns 20.06.2020 18:27:17 +0100 - build 5624
+
+1. Continuation of 3449 - bypassing Recycle Bin is possible on any errors, since the OS returns arbitrary errors in general.
+
+svs 19.06.2020 00:24:34 +0300 - build 5623
+
+1. SQLite 3.32.3
+
 drkns 17.06.2020 19:50:37 +0100 - build 5622
 
 1. Copy progress dialog correctly shows times over 100 hours.
