@@ -1,3 +1,7 @@
+drkns 20.06.2020 18:27:17 +0100 - build 5624
+
+1. Продолжение 3449 - удаление в обход корзины доступно при любых ошибках, т.к. ОС в общем случае возвращает что попало.
+
 svs 19.06.2020 00:24:34 +0300 - build 5623
 
 1. SQLite 3.32.3
